EndPoint moved into "default.properties" in "env" folder "pages" package moved into "main" directory

--- a/reports/html-report/specs/SpeakTest.html
+++ b/reports/html-report/specs/SpeakTest.html
@@ -72,7 +72,7 @@
   </div>
 
   <div id="listOfSpecifications">
-    <ul id="scenarios" class="spec-list">
+    <ul id="stepImpl" class="spec-list">
     
       <a href="SpeakTest.html">
          <li class='passed spec-name'>
