--- a/reports/html-report/specs/Test.html
+++ b/reports/html-report/specs/Test.html
@@ -72,7 +72,7 @@
   </div>
 
   <div id="listOfSpecifications">
-    <ul id="scenarios" class="spec-list">
+    <ul id="stepImpl" class="spec-list">
     
       <a href="Test.html">
          <li class='passed spec-name'>
